@@ -2,6 +2,7 @@
 
 * Fix uninitialized constant Mongrel::Camping error
 * Fix rails 2 deprecation warnings on startup
+* Added search based on Barry Arthur's work.  Thanks Barry!
 
 = 0.0.27 2006-12-18
 
